priv/static/css/app.css
/* This file is the main application css. */

body {
  font-size: .8rem;
  font-weight: 400;
  line-height: 1.5;
}

body {
  padding-top: 50px
}

@media (min-width:768px) {
  body {
    padding-top: 0
  }
}

@media (min-width:768px) {
  body {
    margin-left: 162px
  }
}

.navbar.fixed-left {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1030
}

@media (min-width:768px) {
  .navbar.fixed-left {
    bottom: 0;
    width: 162px;
    border-right: .1em solid;
    flex-flow: column nowrap;
    align-items: flex-start
  }

  .navbar.fixed-left .navbar-collapse {
    flex-grow: 0;
    flex-direction: column;
    width: 100%
  }

  .navbar.fixed-left .navbar-collapse .navbar-nav {
    flex-direction: column;
    width: 100%
  }

  .navbar.fixed-left .navbar-collapse .navbar-nav .nav-item {
    width: 100%
  }

  .navbar.fixed-left .navbar-collapse .navbar-nav .nav-item .dropdown-menu {
    top: 0
  }
}

@media (min-width:768px) {
  .navbar.fixed-left {
    right: auto
  }

  .navbar.fixed-left .navbar-nav .nav-item .dropdown-toggle:after {
    border-top: .3em transparent;
    border-left: .3em solid;
    border-bottom: .3em transparent;
    border-right: none;
    vertical-align: baseline
  }

  .navbar.fixed-left .navbar-nav .nav-item .dropdown-menu {
    left: 100%
  }
}

.profiles-divider {
  margin-top: 1rem;
  /* border-top: 1px solid rgb(58, 58, 58); */
  color: transparent;
}

.divider {
  margin-top: 0rem;
  margin-bottom: 0rem;
  border: 0;
  border-top: 10px solid rgba(0, 0, 0, 0.1);
}

.title-uppercase {
  text-transform: uppercase;
}

blockquote {
  font-style: italic;
}

blockquote small {
  font-style: normal;
}

.glyphicon {
  line-height: 1;
}

.required {
  color: black;
  font-weight: 500;
}

.reserved {
  color: rgb(46, 26, 177);
  font-weight: 500;
}

sup {
  font-weight: 500;
}

.observable {
  background-color: #224F8B;
  color: white;
}

.uid {
  font-weight: 300;
}

.optional {
  color: #403D39;
  font-weight: 300;
}

.base-event {
  font-style: italic;
}

strong {
  color: #403D39;
}

/*     General overwrite     */

a {
  color: #42638eca;
}

a:hover, a:focus {
  color: #1c73e3;
  text-decoration: none;
}

.ui-slider-handle:focus, .navbar-toggle, input:focus, button:focus {
  outline: 0 !important;
}

li {
  margin-bottom: 4px;
}

/* Custom page footer */
.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  font-weight: 75;
  text-align: center;
  color: rgb(0, 0, 72);
  background-color: lightgray;
  background-image: linear-gradient(snow, gray);
}

.active {
  border-bottom: 2px solid #00A4B7;
}

.rights {
  position: fixed;
  width: 100%;
  bottom: 50px;
}

table {
  table-layout: fixed;
  word-wrap: break-word;
}

table tr td {
  padding: 0 20px;
}

table.table-borderless tr td {
  padding: 0 10px !important;
  padding: 0 20px;
}

tr.thead-color {
  background-color: #f0f0f0;
}

.borderless th {
  border: none;
}

.schema {
  background-color: #f0f0f0;
}

.name {
  background-color: #224F8B;
  color: lightgrey;
}

.links {
  padding-top: 20px;
  padding-bottom: 40px;
}

.btn-link {
  padding-top: 0.42rem;
  font-size: 0.8rem;
}

.main-page {
  padding-bottom: 2px;
}

.name a {
  color: lightgrey !important;
}

.name a:hover, a:focus {
  color: white !important;
  text-decoration: none;
}

.capitalize {
  text-transform: capitalize;
}

span.hidden {
  display: none;
}

/* Collapsible description */

[data-toggle="collapse"].collapsed .if-not-collapsed {
  display: none;
}

[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
  display: none;
}

.tooltip-inner {
  word-wrap: normal;
  max-width: 500px;
  color: #2d2e2ee1;
  text-align: center;
  background: lightyellow;
  border: 1px solid #161616;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

